--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.1",
-    "@chakra-ui/react": "^1.8.1",
-    "@chakra-ui/theme-tools": "^1.3.1",
+    "@chakra-ui/icons": "^2.0.0",
+    "@chakra-ui/react": "^2.0.0",
+    "@chakra-ui/theme-tools": "^2.0.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "framer-motion": "^6.2.3",
-    "next": "12.0.9",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "12.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
